# Juice

./: .gitattributes  .gitignore  LICENSE  README.md
orange-notes/: README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
orange-notes-server/: Cargo.toml  Dockerfile  docker-compose.yml  docker-entrypoint.sh
orange-notes-server/src/: admin.html  admin.rs  admin_auth.rs  admin_static.rs  attachments.rs  auth.rs  db.rs  health.rs  main.rs  mcp.rs  sync.rs
orange-notes/scripts/: free-dev-port.ps1
orange-notes/src/: App.tsx  index.css
orange-notes/src-tauri/: Cargo.toml  tauri.conf.json
orange-notes/src-tauri/icons/: icon.icns
orange-notes/src-tauri/src/: lib.rs  main.rs
orange-notes/src/components/: NoteEditor.tsx  SearchBar.tsx  Sidebar.tsx  ToastViewport.tsx  TreeView.tsx
orange-notes/src/lib/: noteImageEvents.ts
orange-notes/src/store/: useNoteStore.ts  useStateStore.ts  useToastStore.ts
orange-notes/src/sync/: client.ts  encryption.ts  protocol.ts  useSyncStore.ts
orange-notes/src/types/: note.ts
