[package]
name = "orange-notes"
version = "0.1.0"
description = "Orange Notes - a lightweight desktop notebook"
authors = ["Juice"]
edition = "2021"

[lib]
name = "orange_notes_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "orange-notes"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-clipboard-manager = "2"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
